# square

./: .gitignore  CMakeLists.txt  README.md  WORKSPACE
.github/workflows/: unit-test.yml
examples/: CMakeLists.txt
examples/common/glad/: BUILD
examples/common/glad/include/glad/: glad.h
examples/common/glad/src/: glad.c
examples/common/glfw/: BUILD  CMakeLists.txt  version.yml
examples/dev/: BUILD  CMakeLists.txt
examples/dev/src/: constants.h  logger.h  main.cpp
square/: BUILD  CMakeLists.txt  version.yml
square/include/square/: color.h  functional.h  instance.h  square.h  util.h
square/include/square/detail/: base.h
square/include/square/nodes/: clear_buffer.h
square/src/: functional.cpp  instance.cpp  square.cpp  util.cpp
square/src/nodes/: clear_buffer.cpp
square/test/: doctest.cpp  square.cpp
